@@ -330,7 +330,7 @@ you would expect.</para>
 
       <varlistentry>
         <term>
-          <option>-n</option> (No DNS resolution)
+          <option>-n</option> (No reverse DNS resolution)
           <indexterm><primary><option>-n</option></primary></indexterm>
         </term>
         <listitem>
@@ -345,7 +345,7 @@ you would expect.</para>
 
       <varlistentry>
         <term>
-          <option>-R</option> (DNS resolution for all targets)
+          <option>-R</option> (Reverse DNS resolution for all targets)
           <indexterm><primary><option>-R</option></primary></indexterm>
         </term>
         <listitem>
@@ -392,15 +392,14 @@ you would expect.</para>
         </term>
         <listitem>
 
-          <para>By default, Nmap reverse-resolves IP addresses by sending
+          <para>By default, Nmap resolves names to IP addresses (and IP addresses to names) by sending
           queries directly to the name servers configured on your host
-          and then listening for responses.  Many requests (often
+          and then listening for responses. Many requests (often
           dozens) are performed in parallel to improve performance.
           Specify this option to use your system resolver instead (one
           IP at a time via the <function>getnameinfo</function> call).  This is slower
           and rarely useful unless you find a bug in the Nmap parallel
-          resolver (please let us know if you do).  The system
-          resolver is always used for forward lookups (getting an IP address from a hostname).
+          resolver (please let us know if you do).
           </para>
         </listitem>
       </varlistentry>
@@ -408,13 +407,13 @@ you would expect.</para>
       <varlistentry>
         <term>
           <option>--dns-servers <replaceable>server1</replaceable><optional>,<replaceable>server2</replaceable><optional>,...</optional></optional>
-          </option> (Servers to use for reverse DNS queries)
+          </option> (Servers to use for DNS queries)
           <indexterm significance="preferred"><primary><option>--dns-servers</option></primary></indexterm>
         </term>
         <listitem>
 
           <para>By default, Nmap determines your DNS servers
-          (for rDNS resolution) from your resolv.conf file (Unix) or
+          from your resolv.conf file (Unix) or
           the Registry (Win32).  Alternatively, you may use this
           option to specify alternate servers.  This option is not
           honored if you are using <option>--system-dns</option>.
@@ -426,7 +425,7 @@ you would expect.</para>
 
           <para>This option also comes in handy when scanning private
           networks.  Sometimes only a few name servers provide
-          proper rDNS information, and you may not even know where
+          proper DNS information, and you may not even know where
           they are.  You can scan the network for port 53 (perhaps
           with version detection), then try Nmap list scans
           (<option>-sL</option>) specifying each name server one at a
@@ -437,8 +436,8 @@ you would expect.</para>
           exceeds the size of a UDP packet. In such a situation our DNS
           resolver will make the best effort to extract a response from the
           truncated packet, and if not successful it will fall back to
-          using the system resolver. Also, responses that contain CNAME aliases
-          will fall back to the system resolver.</para>
+          using the system resolver.
+          </para>
 
         </listitem>
       </varlistentry>
